# Scoreboard

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: Main.cpp  ResourceHolder.hpp  ResourceHolder.inl  Scoreboard.cpp  Scoreboard.hpp  Team.cpp  Team.hpp  Utils.hpp
